Fix double scrollbar

--- a/src/style/04-elements/_elements.html.scss
+++ b/src/style/04-elements/_elements.html.scss
@@ -1,8 +1,12 @@
-html, body {
+html,
+body {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   overflow-x: hidden;
   height: 100%;
   -webkit-overflow-scrolling: touch;
+}
+
+body {
   overflow-y: scroll;
 }
